[package]
name = "regexpp-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
squalid = { git = "https://github.com/helixbass/squalid", rev = "ca9515c" }

[dev-dependencies]
serde_json = "1.0.108"
speculoos = "0.11.0"
